--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -6,13 +6,128 @@
     android:layout_height="match_parent"
     tools:context="de.puns.sibby.jamoketra.MainScreen">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/MainScreen_welcome_text"
+    <LinearLayout
+        android:id="@+id/mainLayout"
+        android:layout_width="368dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:gravity="bottom"
+        android:orientation="vertical"
+        android:weightSum="100"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:id="@+id/toggleButtonLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="80"
+            android:baselineAligned="false"
+            android:orientation="vertical"
+            android:weightSum="100">
+
+            <ToggleButton
+                android:id="@+id/toggleAllButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:text="@string/toggle_all_button" />
+
+            <TableLayout
+                android:id="@+id/kanaToggleTable"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="95"
+                android:stretchColumns="*"
+                android:weightSum="100">
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="33">
+
+                    <ToggleButton
+                        android:id="@+id/toggleButton12"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="ToggleButton" />
+
+                    <ToggleButton
+                        android:id="@+id/toggleButton13"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="ToggleButton" />
+
+                    <ToggleButton
+                        android:id="@+id/toggleButton14"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="ToggleButton" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="33">
+
+                    <ToggleButton
+                        android:id="@+id/toggleButton12"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="ToggleButton" />
+
+                    <ToggleButton
+                        android:id="@+id/toggleButton13"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="ToggleButton" />
+
+                    <ToggleButton
+                        android:id="@+id/toggleButton14"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="ToggleButton" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="33">
+
+                    <ToggleButton
+                        android:id="@+id/toggleButton12"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="ToggleButton" />
+
+                    <ToggleButton
+                        android:id="@+id/toggleButton13"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="ToggleButton" />
+
+                    <ToggleButton
+                        android:id="@+id/toggleButton14"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="ToggleButton" />
+                </TableRow>
+
+            </TableLayout>
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/goButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:text="@string/go_button" />
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
